[package]
name = "check_build"
version = "0.1.0"
authors = ["SauersML"]
edition = "2021"
description = "A tool to verify a VCF file against hg19 and hg38 references using a streaming, low-memory approach."
license = "MIT"
repository = "https://github.com/SauersML/reference_verifier"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
indicatif = "0.17.11"
reqwest = { version = "0.11.27", features = ["blocking"] }
tempfile = "3.20.0"
flate2 = "1.1"
