[package]
name = "check_build"
version = "0.3.0"
authors = ["SauersML"]
edition = "2024"
rust-version = "1.85"
description = "A tool to verify a VCF file against hg19 and hg38 references using a streaming, low-memory approach."
license = "MIT"
repository = "https://docs.rs/crate/check_build/latest"
documentation = "https://docs.rs/crate/check_build/latest"

[lib]
name = "check_build"
path = "src/lib.rs"

[[bin]]
name = "check_build"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
reqwest = { version = "0.12", features = ["blocking"] }
tempfile = "3.20"
flate2 = "1.1"
rayon = "1.10"
memchr = "2.7"
dirs = "6.0.0"
md5 = "0.8.0"

[dev-dependencies]
tempfile = "3.20"
